syntax = "proto3";

package jobApply;

message RejectPendingJobApplicationRequest { string jobPostId = 1; }

message RejectPendingJobApplicationResponse {}